css fixes on main display flex and gap

--- a/style.css
+++ b/style.css
@@ -76,6 +76,11 @@ header {
   gap: 2.4rem;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  gap: .8rem;
+}
 
 
 .add {
